# genetic-algorithm-on-opencl-for-QTR4-videoplayer

./: .gitignore  CMakeLists.txt  CmakePresets.json  ImagePresentation.c  ImagePresentation.h  Main.c  vcpkg.json
src/: dmatrix.c  dmatrix.h  image_presentation.c  image_presentation.h  kernel.cl  main.c  opencl_stuff.c  opencl_stuff.h  sampled_convert.c  sampled_convert.h  sequential_convert.c  sequential_convert.h  sequential_convert_experiment.c  sequential_convert_experiment.h  utils.c  utils.h  video_import.c  video_import.h
